# Recursive-Idea-Model

./: .gitignore  PRD.md  README.md  TECH_SPEC.md  pyproject.toml  rbmo_paper_1.docx  rim_paper_3.docx  rim_paper_4.docx  rim_paper_5.docx  rim_paper_5.md
.github/workflows/: ci.yml
archive/: rim_paper_1.docx  rim_paper_2.docx
docs/: SELF_ITERATION_POLICY.md
rim/: __init__.py  cli.py
rim/agents/: __init__.py  advanced_verifier.py  arbitrator.py  critics.py  decomposer.py  executable_verifier.py  reconciliation.py  spawner.py  synthesizer.py  verification.py
rim/api/: __init__.py  app.py  job_queue.py  models.py
rim/core/: __init__.py  depth_allocator.py  engine_runtime.py  memory_folding.py  memory_quality.py  modes.py  orchestrator.py  schemas.py  specialist_contract_quality.py
rim/engine/: loader.py  (+2 more)
scripts/: advanced_verify_adapter.py  self_iteration.sh
tests/: test_advanced_verifier.py  test_advanced_verify_adapter_script.py  test_api_idempotency.py  test_api_runs.py  test_arbitrator.py  test_codex_adapter.py  test_critics.py  test_decomposer.py  test_depth_allocator.py  test_engine_package.py  test_eval_dataset.py  test_eval_reports.py  test_eval_scoring.py  test_executable_verifier.py  test_memory_folding.py  test_memory_quality.py  test_modes.py  test_orchestrator_cycles.py  test_orchestrator_engine_delegate.py  test_orchestrator_partial.py  test_pi_adapter.py  test_provider_budget.py  test_provider_router.py  test_reconciliation.py  test_repo_schema.py  test_run_controls.py  test_spawner.py  test_specialist_contract_quality.py  test_verification.py
(+14 files in other folders)
